Fix placeholder contrast

--- a/packages/@adobe/spectrum-css-temp/vars/spectrum-lightest.css
+++ b/packages/@adobe/spectrum-css-temp/vars/spectrum-lightest.css
@@ -118,4 +118,6 @@
   /* missing in spectrum-css */
   --spectrum-tray-background-color: var(--spectrum-global-color-gray-50);
   /* END RSP PATCH */
+  /* react spectrum additions */
+  --react-spectrum-datepicker-placeholder-color: rgb(118, 118, 118); /* 4.54:1 contrast ratio */
 }
